# php-matrix

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO  composer.json  extension.cpp  matrix.cpp  matrix.h  matrixwrapper.cpp  matrixwrapper.h  perfomance-test.php  test.php  test.py  warm-up-test.php
.github/workflows/: php.yml
.libs/: matrix.la  matrix.lai
.libs/matrix.so.dSYM/Contents/: Info.plist
.libs/matrix.so.dSYM/Contents/Resources/Relocations/aarch64/: matrix.so.yml
TEST/SCRIPT/: matrix_operations_benchmark.php  test.php
ThreadManager/: Makefile  ThreadManager.cpp  ThreadManager.h  loop_timing  loop_timing.cpp  main.cpp  thread_manager_test
performance/: matrix_performance_with_out_c_implimentaion.csv  matrix_performance_with_php_cpp_scalling_0.1.csv
